Update styling with dark mode and visual fixes
Added dark mode because I it was long overdue.
Made slight layout adjustments.

--- a/css/style.css
+++ b/css/style.css
@@ -121,8 +121,8 @@ nav {
 }
 
 .display-name {
-  font-size: 1.6em;
-  font-family: serif;
+  font-size: 2.5em;
+  font-family: monospace;
   margin-bottom: .75em;
   margin-top: .25em;
 }
@@ -373,6 +373,15 @@ ul.branch.master-branch {
 
 /* Responsive attributes */
 
+/* Flex is fun, let's add some to make things look better */
+
+@media screen and (min-width: 768px) {
+  .readme-container {
+    display: flex;
+    align-items: center;
+  }
+}
+
 
 /* Tablet responsive propreties */
 
@@ -464,6 +473,7 @@ ul.branch.master-branch {
     font-size: initial;
   }
   .social .button {
+    filter: invert(1);
     opacity: .4;
   }
   .personal-info.expanded .social .button {
@@ -637,4 +647,31 @@ ul.branch.master-branch {
   ul.options-buttons li:nth-child(1) {
     transition-delay: .1s;
   }
+}
+
+/** Dark mode styling **/
+
+@media(prefers-color-scheme:dark) {
+    .readme-section {
+    background: #141619;
+    color: #a0a5aa;
+    }
+
+    .commits-section {
+        background: #191b1d;
+        color: #a0a5aa
+    }
+
+    .commits-section ul li.commit span {
+        color: #a0a5aa
+    }
+
+    .commits-section ul li:before {
+        background: #191b1d;
+    }
+
+    footer {
+        background: #141619;
+        color: #a0a5aa;
+    }
 }
